# rust-app-devops-test

./: Cargo.toml  Dockerfile  README.md
src/: main.rs
